# chat_app

./: CMakeLists.txt  README.md
.cache/clangd/index/: generator_tests.cpp.9B3F045C44AF3ADE.idx
db/: Users.db3
frontend/chatsite/: index.html
frontend/forgot_passowrd/: index.html  style.css
frontend/loginpage/: index.html
src/: CMakeLists.txt  compile_commands.json  generator.cpp  generator.h  generator.hpp  main.cpp  services.cpp  services.h  services.hpp  user.cpp  user.h  user.hpp
src/.cache/clangd/index/: generator.cpp.640BF8FD502A17AA.idx  generator.h.5FFCC64F48C93F36.idx  generator.hpp.F34497B555B46F4B.idx  main.cpp.75705976CF1EBA24.idx  pugiconfig.hpp.096F45069FA986AF.idx  pugixml.cpp.A60EB1B119E59118.idx  pugixml.hpp.722927847D88451D.idx  services.cpp.063D8BDC120BB6F6.idx  services.h.0C444F49C29C91CE.idx  services.hpp.0EB1EB5F85004CC4.idx  user.cpp.3A86E0BB03E6CEA9.idx  user.h.AE9400A56564A83A.idx  user.hpp.DDC6EF8DF3E6F37F.idx
src/XML_test_files/: city_list.xml  file_names.xml  first_names.xml  last_names.xml  post code.xml  streets.xml
src/pugixml/src/: pugixml.cpp  pugixml.hpp
src/pugixml/tests/: test_document.cpp
tests/: CMakeLists.txt  generator_tests.cpp
